--- a/2.a.NAM.md
+++ b/2.a.NAM.md
@@ -4,3 +4,21 @@ National Centers for Environmental Prediction (NCEP) and archived at the Nationa
 The NAM Analysis product was used (https://www.ncei.noaa.gov/data/north-american-mesoscale-model/access/analysis/). 
 This product has a spatial resolution of 12 km and temporal resolution of 6 h. 
 This modeling system is commonly used in hurricane research (e.g., Garzon et al. 2018; Liu et al. 2020).
+
+The North American Mesoscale Forecast System (NAM) is one of the National Centers For Environmental Prediction’s (NCEP) major models for producing weather forecasts. NAM generates multiple grids (or domains) of weather forecasts over the North American continent at various horizontal resolutions. Each grid contains data for dozens of weather parameters, including temperature, precipitation, lightning, and turbulent kinetic energy. NAM uses additional numerical weather models to generate high-resolution forecasts over fixed regions, and occasionally to follow significant weather events like hurricanes.
+
+https://www.ncei.noaa.gov/products/weather-climate-models/north-american-mesoscale
+
+AIRS:
+http://www.ncdc.noaa.gov/has/HAS.FileAppRouter?datasetname=NAMANL218&subqueryby=STATION&applname=&outdest=FILE
+
+THREDDS:
+https://www.ncei.noaa.gov/thredds/catalog/model-namanl/catalog.html
+
+HTTP:
+https://www.ncei.noaa.gov/data/north-american-mesoscale-model/access/
+
+
+
+
+
