--- a/2.a.NAM.md
+++ b/2.a.NAM.md
@@ -18,6 +18,18 @@ https://www.ncei.noaa.gov/thredds/catalog/model-namanl/catalog.html
 HTTP:
 https://www.ncei.noaa.gov/data/north-american-mesoscale-model/access/
 
+Using AIRS:
+(a) 13 Sep (prior to the storm arrival) and (b)–(d) 14–16 Sep
+
+https://unidata.github.io/python-gallery/examples/xarray_500hPa_map.html
+
+
+THREDDS database
+https://www.ncei.noaa.gov/thredds/catalog/model-namanl/202009/20200913
+https://www.ncei.noaa.gov/thredds/catalog/model-namanl/202009/20200914
+https://www.ncei.noaa.gov/thredds/catalog/model-namanl/202009/20200915
+https://www.ncei.noaa.gov/thredds/catalog/model-namanl/202009/20200916
+
 
 
 
