--- a/2.a.NAM.md
+++ b/2.a.NAM.md
@@ -32,6 +32,24 @@ https://www.ncei.noaa.gov/thredds/catalog/model-namanl/202009/20200915
 https://www.ncei.noaa.gov/thredds/catalog/model-namanl/202009/20200916
 ```
 
+env.yml
+```
+name: nam
+channels:
+  - conda-forge
+dependencies:
+ - cartopy
+ - netcdf4
+ - xarray
+ - wget
+ - scipy
+ - matplotlib
+ - notebook
+```
+
+```
+conda env create --prefix ./env_nam -f env.yml 
+
 
 
 
