--- a/2.a.NAM.md
+++ b/2.a.NAM.md
@@ -48,7 +48,12 @@ dependencies:
 ```
 
 ```
-conda env create --prefix ./env_nam -f env.yml 
+conda env create --prefix ./env_nam -f env.yml
+conda activate /Users/lllowe/TOPS/nam/env_nam
+jupyter-notebook xarray_500hPa_map.ipynb 
+```
+
+
 
 
 
