--- a/2.a.NAM.md
+++ b/2.a.NAM.md
@@ -53,6 +53,15 @@ conda activate /Users/lllowe/TOPS/nam/env_nam
 jupyter-notebook xarray_500hPa_map.ipynb 
 ```
 
+https://github.com/ecmwf/cfgrib
+
+Filter heterogeneous GRIB files
+xr.open_dataset can open a GRIB file only if all the messages with the same shortName can be represented as a single hypercube. For example, a variable t cannot have both isobaricInhPa and hybrid typeOfLevel's, as this would result in multiple hypercubes for the same variable. Opening a non-conformant GRIB file will fail with a ValueError: multiple values for unique key... error message, see #2.
+
+Furthermore if different variables depend on the same coordinate, for example step, the values of the coordinate must match exactly. For example, if variables t and z share the same step coordinate, they must both have exactly the same set of steps. Opening a non-conformant GRIB file will fail with a ValueError: key present and new value is different... error message, see #13.
+
+In most cases you can handle complex GRIB files containing heterogeneous messages by passing the filter_by_keys key in backend_kwargs to select which GRIB messages belong to a well formed set of hypercubes.
+
 
 
 
