--- a/2.c.MURsst.md
+++ b/2.c.MURsst.md
@@ -13,7 +13,16 @@
 
  Open a small sample in VisIt
 
- ncks -v analysed_sst -d lon,-93.,-78. -d lat,25.,34. 20200914090000-JPL-L4_GHRSST-SSTfnd-MUR-GLOB-v02.0-fv04.1.nc biggerbox.nc
+ncks -v analysed_sst -d lon,-93.,-78. -d lat,24.,34. 20200912090000-JPL-L4_GHRSST-SSTfnd-MUR-GLOB-v02.0-fv04.1.nc 20200912-SST.nc
+ncks -v analysed_sst -d lon,-93.,-78. -d lat,24.,34. 20200913090000-JPL-L4_GHRSST-SSTfnd-MUR-GLOB-v02.0-fv04.1.nc 20200913-SST.nc
+ncks -v analysed_sst -d lon,-93.,-78. -d lat,24.,34. 20200914090000-JPL-L4_GHRSST-SSTfnd-MUR-GLOB-v02.0-fv04.1.nc 20200914-SST.nc
+ncks -v analysed_sst -d lon,-93.,-78. -d lat,24.,34. 20200915090000-JPL-L4_GHRSST-SSTfnd-MUR-GLOB-v02.0-fv04.1.nc 20200915-SST.nc
+ncks -v analysed_sst -d lon,-93.,-78. -d lat,24.,34. 20200916090000-JPL-L4_GHRSST-SSTfnd-MUR-GLOB-v02.0-fv04.1.nc 20200916-SST.nc
+ncks -v analysed_sst -d lon,-93.,-78. -d lat,24.,34. 20200917090000-JPL-L4_GHRSST-SSTfnd-MUR-GLOB-v02.0-fv04.1.nc 20200917-SST.nc
+
+
+ Search Granules
+ https://search.earthdata.nasa.gov/search/granules?p=C1996881146-POCLOUD 
 
  
 
