--- a/2.b.insitu.md
+++ b/2.b.insitu.md
@@ -45,9 +45,9 @@ Click Method 2 to see what is there.  It will show up in the browser.
 Then, under Method 1, right click and copy the link address:
 https://www.ndbc.noaa.gov/data/historical/stdmet/dpia1h2020.txt.gz
 
-Use wget in the notebook:
+To get the code in the notebook:
 ```
-!wget https://www.ndbc.noaa.gov/data/historical/stdmet/dpia1h2020.txt.gz
+!curl -O https://www.ndbc.noaa.gov/data/historical/stdmet/dpia1h2020.txt.gz
 ```
 
 Okay, DPIA has meterological and DPHA has hydrographic.
