--- a/2.a.besttrack.md
+++ b/2.a.besttrack.md
@@ -49,3 +49,14 @@ https://www.nhc.noaa.gov/gis/best_track/al192020_windswath.kmz
 The .zip file has shapefiles with the same information as the kmz's.
 
 
+Next steps...
+
+Check Google Earth
+
+Python library:
+
+https://pypi.org/project/hurdat2parser
+
+
+
+
