--- a/2.a.besttrack.md
+++ b/2.a.besttrack.md
@@ -57,6 +57,10 @@ Python library:
 
 https://pypi.org/project/hurdat2parser
 
+NOAA Hurricane Tracks
+
+Wind speed and pressure readings are also available.  By “sharing” search results, the track and data can be saved to a link.
+
 
 
 
