--- a/2.a.besttrack.md
+++ b/2.a.besttrack.md
@@ -54,13 +54,19 @@ Next steps...
 Check Google Earth
 
 Python library:
-
-https://pypi.org/project/hurdat2parser
+- https://pypi.org/project/hurdat2parser
 
 NOAA Hurricane Tracks
+- Wind speed and pressure readings are also available.  By “sharing” search results, the track and data can be saved to a link.
 
-Wind speed and pressure readings are also available.  By “sharing” search results, the track and data can be saved to a link.
+SECOORA
+- https://secoora.org/hurricane-resources/#:~:text=NOAA%20National%20Hurricane%20Center,tracks%20and%20wind%20speed%20probabilities.
 
+HURDAT2
+- PDF info: https://www.nhc.noaa.gov/data/hurdat/hurdat2-format-atl-1851-2021.pdf
+
+wget https://www.nhc.noaa.gov/data/hurdat/hurdat2-1851-2022-050423.txt
+>This dataset (known as Atlantic HURDAT2) has a comma-delimited, text format with six-hourly information on the location, maximum winds, central pressure, and (beginning in 2004) size of all known tropical cyclones and subtropical cyclones. The original HURDAT database has been retired.
 
 
 
