--- a/2.a.besttrack.md
+++ b/2.a.besttrack.md
@@ -68,5 +68,15 @@ HURDAT2
 wget https://www.nhc.noaa.gov/data/hurdat/hurdat2-1851-2022-050423.txt
 >This dataset (known as Atlantic HURDAT2) has a comma-delimited, text format with six-hourly information on the location, maximum winds, central pressure, and (beginning in 2004) size of all known tropical cyclones and subtropical cyclones. The original HURDAT database has been retired.
 
+```
+from tkinter import *
+import hurdat2parser as hd2
+atl = hd2.Hurdat2(basin="atl")
+sally = atl["sally"]
+sally.track_map()
+```
+
+
+
 
 
