--- a/2.a.besttrack.md
+++ b/2.a.besttrack.md
@@ -55,6 +55,35 @@ Check Google Earth
 
 Python library:
 - https://pypi.org/project/hurdat2parser
+- packages pyshp, geojson, and matplotlib will be downloaded as dependencies
+```
+from tkinter import *
+import hurdat2parser as hd2
+print(dir(hd2))
+#Try the download one
+atl = hd2.Hurdat2(basin="atl")
+#atl = hd2.Hurdat2("hurdat2-1851-2022-050423.txt")
+print(atl)
+print(atl[2020])
+print(atl["sally"])
+sally = atl["sally"]
+#lat/lon of path
+sally.gps
+#highest maximum sustained wind-speed
+sally.maxwind
+#lowest recorded pressure
+sally.minmslp
+print(sally.maxwind_mslp)
+print(sally.minmslp_wind)
+#sally.track_map()
+sally.info()
+print(sally.duration_TC)
+print(sally.duration_TS)
+print(sally.duration_HU)
+print(sally.duration_MHU)
+print(sally.track_map.__doc__)
+
+
 
 NOAA Hurricane Tracks
 - Wind speed and pressure readings are also available.  By “sharing” search results, the track and data can be saved to a link.
@@ -68,15 +97,7 @@ HURDAT2
 wget https://www.nhc.noaa.gov/data/hurdat/hurdat2-1851-2022-050423.txt
 >This dataset (known as Atlantic HURDAT2) has a comma-delimited, text format with six-hourly information on the location, maximum winds, central pressure, and (beginning in 2004) size of all known tropical cyclones and subtropical cyclones. The original HURDAT database has been retired.
 
-```
-from tkinter import *
-import hurdat2parser as hd2
-atl = hd2.Hurdat2(basin="atl")
-sally = atl["sally"]
-sally.track_map()
-```
 
-
-
-
+Other Python packages
+- https://tropycal.github.io/tropycal/index.html
 
