--- a/2.a.besttrack.md
+++ b/2.a.besttrack.md
@@ -82,7 +82,7 @@ print(sally.duration_TS)
 print(sally.duration_HU)
 print(sally.duration_MHU)
 print(sally.track_map.__doc__)
-
+```
 
 
 NOAA Hurricane Tracks
@@ -100,4 +100,6 @@ wget https://www.nhc.noaa.gov/data/hurdat/hurdat2-1851-2022-050423.txt
 
 Other Python packages
 - https://tropycal.github.io/tropycal/index.html
+
+tropycal is a larger package with lots of dependencies.  
 
