--- a/2.c.MURsst.md
+++ b/2.c.MURsst.md
@@ -1,12 +1,24 @@
  Satellite-derived sea surface temperature data
 
+Web search 
+- Google, "NASA mur dataset"
+- [MEaSUREs - Multi-scale Ultra-high Resolution (MUR) Sea ...](https://podaac.jpl.nasa.gov/MEaSUREs-MUR)
+- Scroll down, click DATA, 2 matching datasets
+- This paper uses Level
+
+NASA (.gov)
+https://podaac.jpl.nasa.gov › MEaSUREs-MURkk
+https://podaac.jpl.nasa.gov/dataset/MUR-JPL-L4-GLOB-v4.1
+ 
+ 
+ 
  https://podaac.jpl.nasa.gov/MEaSUREs-MUR
 
  Sea surface temperature data were obtained from the Jet Propulsion Laboratory (JPL) Multiscale Ultrahigh Resolution (MUR) 
  sea surface temperature product (https://podaac.jpl.nasa.gov/dataset/MUR-JPL-L4-GLOB-v4.1). 
  This is a daily 1-km-resolution product that blends 1-km infrared sensor data and 25-km microwave sensor data. 
 
- Why not use v4.1?
+ Why not use v4.2?
 
 
  https://opendap.earthdata.nasa.gov/
