--- a/2.c.MURsst.md
+++ b/2.c.MURsst.md
@@ -1,10 +1,26 @@
  Satellite-derived sea surface temperature data
 
-Web search 
+Web search: 
 - Google, "NASA mur dataset"
 - [MEaSUREs - Multi-scale Ultra-high Resolution (MUR) Sea ...](https://podaac.jpl.nasa.gov/MEaSUREs-MUR)
 - Scroll down, click DATA, 2 matching datasets
-- This paper uses Level
+- This paper uses Level 4.1, click [that link](https://podaac.jpl.nasa.gov/dataset/MUR-JPL-L4-GLOB-v4.1)
+- Record the DOI: 10.5067/GHGMR-4FJ04
+- Save the citation, for example the [BIB](https://data.datacite.org/application/x-bibtex/10.5067/GHGMR-4FJ04)
+```
+  @misc{https://doi.org/10.5067/ghgmr-4fj04,
+  doi = {10.5067/GHGMR-4FJ04},
+  url = {http://podaac.jpl.nasa.gov/dataset/MUR-JPL-L4-GLOB-v4.1},
+  author = {{NASA/JPL}},
+  title = {GHRSST Level 4 MUR Global Foundation Sea Surface Temperature Analysis (v4.1)},
+  publisher = {NASA Physical Oceanography Distributed Active Archive Center},
+  year = {2015}
+}
+```
+- Read the documentation
+- Data Access
+
+  
 
 NASA (.gov)
 https://podaac.jpl.nasa.gov › MEaSUREs-MURkk
