--- a/2.c.MURsst.md
+++ b/2.c.MURsst.md
@@ -20,6 +20,17 @@ Web search:
 - Read the documentation
 - Data Access
 
+Data Access
+
+[HTTPS endpoint](https://cmr.earthdata.nasa.gov/virtual-directory/collections/C1996881146-POCLOUD)
+
+[2020](https://cmr.earthdata.nasa.gov/virtual-directory/collections/C1996881146-POCLOUD/temporal/2020)
+- Internal server error
+```
+{"message": "Internal server error"}
+```
+
+
   
 
 NASA (.gov)
