--- a/2.c.MURsst.md
+++ b/2.c.MURsst.md
@@ -30,27 +30,83 @@ Data Access
 {"message": "Internal server error"}
 ```
 
+September
+- [09](https://cmr.earthdata.nasa.gov/virtual-directory/collections/C1996881146-POCLOUD/temporal/2020/09)
 
-  
+See hurricane tracker to find 'best' date, highest winds with lowest pressure: 9 16 09.  Clicking on 16 shows the file is called 2020 09 17 at 9, so click on 15.  15 says 2020 09 16 09.
 
-NASA (.gov)
+Clicking on that requires Earthdata login.
+
+It will prompt you to download 20200916090000-JPL-L4_GHRSST-SSTfnd-MUR-GLOB-v02.0-fv04.1.nc
+
+Before looking at it, check the metadata.
+
+The file is 728 MB
+```
+(base) lllowe@LisasMacStudio ~ % ls -lrth
+-rw-r--r--@    1 lllowe  staff   728M Jul 21 14:44 20200916090000-JPL-L4_GHRSST-SSTfnd-MUR-GLOB-v02.0-fv04.1.nc
+```
+
+```
+(/Users/lllowe/TOPS/nam/env_nam) lllowe@LisasMacStudio ~ % ncdump -h 20200916090000-JPL-L4_GHRSST-SSTfnd-MUR-GLOB-v02.0-fv04.1.nc
+netcdf \20200916090000-JPL-L4_GHRSST-SSTfnd-MUR-GLOB-v02.0-fv04.1 {
+dimensions:
+	time = 1 ;
+	lat = 17999 ;
+	lon = 36000 ;
+```
+
+Panoply requires installation of Java.  Opening the whole file chokes VisIt.  And Paraview.
+
+```
+raw
+https://opendap.earthdata.nasa.gov/providers/POCLOUD/collections/GHRSST%20Level%204%20MUR%20Global%20Foundation%20Sea%20Surface%20Temperature%20Analysis%20(v4.1)/granules/20200916090000-JPL-L4_GHRSST-SSTfnd-MUR-GLOB-v02.0-fv04.1.dap.nc4?dap4.ce=/analysed_sst[0:1:0][0:1:17998][0:1:35999];/lat[0:1:17998];/lon[0:1:35999];/time[0:1:0]
+
+encoded
+https://opendap.earthdata.nasa.gov/providers/POCLOUD/collections/GHRSST%2520Level%25204%2520MUR%2520Global%2520Foundation%2520Sea%2520Surface%2520Temperature%2520Analysis%2520(v4.1)/granules/20200916090000-JPL-L4_GHRSST-SSTfnd-MUR-GLOB-v02.0-fv04.1.dap.nc4?dap4.ce=/analysed_sst%5B0:1:0%5D%5B0:1:17998%5D%5B0:1:35999%5D;/lat%5B0:1:17998%5D;/lon%5B0:1:35999%5D;/time%5B0:1:0%5D
+```
+```
+wget https://archive.podaac.earthdata.nasa.gov/podaac-ops-cumulus-protected/MUR-JPL-L4-GLOB-v4.1/20200916090000-JPL-L4_GHRSST-SSTfnd-MUR-GLOB-v02.0-fv04.1.nc
+```
+
+  NASA (.gov)
 https://podaac.jpl.nasa.gov › MEaSUREs-MURkk
 https://podaac.jpl.nasa.gov/dataset/MUR-JPL-L4-GLOB-v4.1
- 
- 
- 
- https://podaac.jpl.nasa.gov/MEaSUREs-MUR
+
+Accessing with curl and wget
+https://urs.earthdata.nasa.gov/documentation/for_users/data_access/curl_and_wget
+
+echo "machine urs.earthdata.nasa.gov login lllowe password rze@crk@bux0tzy6BNT" > .netrc
+
+
+```
+> cd ~
+  > touch .netrc
+  > echo "machine urs.earthdata.nasa.gov login uid_goes_here password password_goes_here" > .netrc
+  > chmod 0600 .netrc
+> > cd ~
+  > touch .urs_cookies
+```
+
+
+
+```
+> wget --load-cookies ~/.urs_cookies --save-cookies ~/.urs_cookies --keep-session-cookies wget https://archive.podaac.earthdata.nasa.gov/podaac-ops-cumulus-protected/MUR-JPL-L4-GLOB-v4.1/20200916090000-JPL-L4_GHRSST-SSTfnd-MUR-GLOB-v02.0-fv04.1.nc
+```
+
+
+
+https://podaac.jpl.nasa.gov/MEaSUREs-MUR
 
  Sea surface temperature data were obtained from the Jet Propulsion Laboratory (JPL) Multiscale Ultrahigh Resolution (MUR) 
  sea surface temperature product (https://podaac.jpl.nasa.gov/dataset/MUR-JPL-L4-GLOB-v4.1). 
  This is a daily 1-km-resolution product that blends 1-km infrared sensor data and 25-km microwave sensor data. 
 
- Why not use v4.2?
+Why not use v4.2?
 
+https://opendap.earthdata.nasa.gov/
 
- https://opendap.earthdata.nasa.gov/
-
- Open a small sample in VisIt
+Open a small sample in VisIt
 ```
 ncks -v analysed_sst -d lon,-93.,-78. -d lat,24.,34. 20200912090000-JPL-L4_GHRSST-SSTfnd-MUR-GLOB-v02.0-fv04.1.nc 20200912-SST.nc
 ncks -v analysed_sst -d lon,-93.,-78. -d lat,24.,34. 20200913090000-JPL-L4_GHRSST-SSTfnd-MUR-GLOB-v02.0-fv04.1.nc 20200913-SST.nc
