--- a/2.a.NAM.md
+++ b/2.a.NAM.md
@@ -62,6 +62,29 @@ Furthermore if different variables depend on the same coordinate, for example st
 
 In most cases you can handle complex GRIB files containing heterogeneous messages by passing the filter_by_keys key in backend_kwargs to select which GRIB messages belong to a well formed set of hypercubes.
 
+The relevant code in the Notebook:
+```
+import cfgrib
+# I downloaded the data to my Mac
+file = 'namanl_218_2020091506.g2/nam_218_20200915_0600_000.grb2'
+#need cfgrib.open for nam, xr.open(cfgrib) gives problems. 
+ds = cfgrib.open_datasets(file)
+#Find which piece has pres,t,u,v,q
+#ds
+#It was the sixth one
+df = ds[6]
+#Rename coordinates to something VisIt recognizes and can translate
+#First rename longitude, latitude 
+df = df.rename({'longitude':'LONGXY','latitude':'LATIXY'})
+#Rename x and y to longitude,latitude
+df = df.rename_dims({'x': 'longitude','y': 'latitude'})
+#Remap, so we can overlay -lon formatted data (e.g., HURDAT)
+with df as src:
+    df.coords['LONGXY'] = (df.coords['LONGXY'] + 180) % 360 - 180
+#Output to netCDF
+df.to_netcdf("data.nc")
+```
+
 
 
 
