--- a/2.c.MURsst.md
+++ b/2.c.MURsst.md
@@ -90,7 +90,7 @@ https://urs.earthdata.nasa.gov/documentation/for_users/data_access/curl_and_wget
 
 
 ```
-> wget --load-cookies ~/.urs_cookies --save-cookies ~/.urs_cookies --keep-session-cookies wget https://archive.podaac.earthdata.nasa.gov/podaac-ops-cumulus-protected/MUR-JPL-L4-GLOB-v4.1/20200916090000-JPL-L4_GHRSST-SSTfnd-MUR-GLOB-v02.0-fv04.1.nc
+> wget --load-cookies ~/.urs_cookies --save-cookies ~/.urs_cookies --keep-session-cookies https://archive.podaac.earthdata.nasa.gov/podaac-ops-cumulus-protected/MUR-JPL-L4-GLOB-v4.1/20200916090000-JPL-L4_GHRSST-SSTfnd-MUR-GLOB-v02.0-fv04.1.nc
 ```
 
 
